--- a/layouts/shortcodes/covid.html
+++ b/layouts/shortcodes/covid.html
@@ -1,4 +1,2 @@
-<div class="alert alert-danger" role="alert">
-<strong>Viktig om Covid-19</strong><br>
-  Jeg anerkjenner at Covid-19 eksisterer. Før du besøker meg, må du ikke ha symptomer på viruset. Jeg har desinfeksjonsmiddel (ordinær håndsåpe). Les mer på <a href="https://www.fhi.no/sv/smittsomme-sykdommer/corona/" class="alert-link" target="_blank" rel="noreferrer noopener">Folkehelseinstituttets nettsider</a>.
+<strong>Viktig om Covid-19 (koronavirus)</strong><br>Besøk er ikke tillatt hvis du har symptomer på koronavirus. Hvis du er frisk, kan jeg tilby desinfeksjonsmiddel under besøket. Les mer om symptomer, karantene og isolasjon på <a href="https://www.fhi.no/sv/smittsomme-sykdommer/corona/" class="alert-link" target_blank>Folkehelseinstituttets nettsider</a>.
 </div>
