Omorganisert visit til flere sider

--- a/layouts/shortcodes/covid.html
+++ b/layouts/shortcodes/covid.html
@@ -1,2 +1,3 @@
+<div class="alert alert-danger" role="alert">
 <strong>Viktig om Covid-19 (koronavirus)</strong><br>Besøk er ikke tillatt hvis du har symptomer på koronavirus. Hvis du er frisk, kan jeg tilby desinfeksjonsmiddel under besøket. Les mer om symptomer, karantene og isolasjon på <a href="https://www.fhi.no/sv/smittsomme-sykdommer/corona/" class="alert-link" target_blank>Folkehelseinstituttets nettsider</a>.
 </div>
