--- a/layouts/shortcodes/covid.html
+++ b/layouts/shortcodes/covid.html
@@ -1,5 +1,12 @@
 <div class="alert alert-warning alert-dismissible fade show" role="alert">
-<strong>Viktig om Covid-19 (koronavirus)</strong><br>Besøk er ikke tillatt hvis du har symptomer på koronavirus. Hvis du er frisk, kan jeg tilby desinfeksjonsmiddel under besøket. Les mer om symptomer, karantene og isolasjon på <a href="https://www.fhi.no/sv/smittsomme-sykdommer/corona/" class="alert-link" target_blank>Folkehelseinstituttets nettsider</a>.   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+  <strong>Viktig om Covid-19 (koronavirus)</strong>
+  <br>
+  Besøk er ikke tillatt hvis du har symptomer på koronavirus. Hvis du er frisk,
+  kan jeg tilby desinfeksjonsmiddel under besøket. Les mer om symptomer, karantene og isolasjon på
+  <a href="https://www.fhi.no/sv/smittsomme-sykdommer/corona/" class="alert-link">
+    Folkehelseinstituttets nettsider
+  </a>.
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
