--- a/layouts/shortcodes/covid.html
+++ b/layouts/shortcodes/covid.html
@@ -2,7 +2,7 @@
 <!-- Brukes på visitt-sidene -->
 
 <div class="alert alert-primary alert-dismissible fade show" role="alert">
-  Har du luftveisinfeksjoner eller andre symptomer på covid-19? Da skal du ikke komme på besøk til meg. Les mer om <a href="https://www.fhi.no/nettpub/coronavirus/fakta/hvis_du_mistenker_at_du_er_syk_med_covid-19/" target=_blank class="alert-link">hva du skal gjøre hvis du mistenker at du er smittet på Folkehelseinstituttets sider</a>. Hvis du er frisk, er du velkommen uten håndhilsing, med en meters avstand og hyppig håndvask.
+  Har du luftveisinfeksjoner eller andre symptomer på covid-19? Da skal du ikke komme på besøk til meg. Les mer om <a href="https://www.fhi.no/nettpub/coronavirus/fakta/hvis_du_mistenker_at_du_er_syk_med_covid-19/" target="_blank" class="alert-link">hva du skal gjøre hvis du mistenker at du er smittet på Folkehelseinstituttets sider</a>. Hvis du er frisk, er du velkommen uten håndhilsing, med en meters avstand og hyppig håndvask.
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
   </button>
